test_output.txt
============================= test session starts =============================
platform win32 -- Python 3.14.0, pytest-9.0.2, pluggy-1.6.0 -- C:\Python314\python.exe
cachedir: .pytest_cache
rootdir: C:\DevAps\DeskAI\dhii-mail
configfile: pytest.ini
plugins: anyio-4.12.0
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
__________________ ERROR collecting tests/test_email_sync.py __________________
C:\Users\amitv\AppData\Roaming\Python\Python314\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\amitv\AppData\Roaming\Python\Python314\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
C:\Users\amitv\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_email_sync.py:5: in <module>
    from plugins.email.services.sync_service import EmailSyncService
plugins\email\__init__.py:5: in <module>
    from .email_plugin import EmailPlugin, EMAIL_PLUGIN_CONFIG
E     File "C:\DevAps\DeskAI\dhii-mail\plugins\email\email_plugin.py", line 239
E       logger.info("Initializing email plugin")
E   IndentationError: unexpected indent
=========================== short test summary info ===========================
ERROR tests/test_email_sync.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.77s ===============================
